fix: fix gap between blocks

--- a/sources/src/sass/blocks/_catalog_page.scss
+++ b/sources/src/sass/blocks/_catalog_page.scss
@@ -22,6 +22,6 @@
 
 .advantage.catalog__advantage {
   @include lg {
-    padding-top: 100px;
+    margin-top: 100px;
   }
 }
