--- a/sources/src/sass/blocks/_index.scss
+++ b/sources/src/sass/blocks/_index.scss
@@ -742,20 +742,20 @@
 /*===== advantage styles =====*/
 
 .advantage {
-  padding-bottom: $block_padding;
+  margin-bottom: $block_padding;
 }
 
 .advantage.catalog__advantage {
-  padding-top: 150px;
+  margin-top: 150px;
   padding-bottom: 0;
 
   @include md {
-    padding-top: 100px;
+    margin-top: 100px;
     padding-bottom: 0;
   }
 
   @include xxs {
-    padding-top: 60px;
+    margin-top: 60px;
     padding-bottom: 0;
   }
 }
@@ -816,7 +816,7 @@
 // === hotline__advantage styles
 
 .hotline__advantage {
-  padding-top: 150px;
+  margin-top: 150px;
 
   .advantage__text {
     p {
@@ -838,11 +838,11 @@
   }
 
   @include md {
-    padding-top: 100px;
+    margin-top: 100px;
   }
 
   @include xxs {
-    padding-top: 60px;
+    margin-top: 60px;
   }
 }
 
