--- a/sources/src/sass/blocks/_park.scss
+++ b/sources/src/sass/blocks/_park.scss
@@ -34,6 +34,14 @@
   @include xxs {
     font-size: 18px;
   }
+
+  a {
+    transition: var(--transition);
+  }
+
+  a:hover {
+    color: var(--color_yellow);
+  }
 }
 
 .park__wrapper {
