--- a/sources/src/sass/blocks/_promotions.scss
+++ b/sources/src/sass/blocks/_promotions.scss
@@ -1,12 +1,12 @@
 .promotions {
-  padding-top: 150px;
+  margin-top: 150px;
 
   @include md {
-    padding-top: 100px;
+    margin-top: 100px;
   }
 
   @include xxs {
-    padding-top: 60px;
+    margin-top: 60px;
   }
 }
 
@@ -54,7 +54,7 @@
 
 .infoBlock__promotions {
   margin-bottom: 150px;
-  padding-top: 150px;
+  margin-top: 150px;
 
   .infoBlock__title {
     max-width: 670px;
@@ -62,7 +62,7 @@
 
   @include md {
     margin-bottom: 100px;
-    padding-top: 105px;
+    margin-top: 105px;
 
     .infoBlock__title {
       max-width: 100%;
@@ -77,11 +77,11 @@
 
   @include xxs {
     margin-bottom: 57px;
-    padding-top: 61px;
+    margin-top: 61px;
   }
 
   @include xxxs {
-    padding-top: 40px;
+    margin-top: 40px;
   }
 }
 
